fix an oversight in float styling on small screens

--- a/node_js/material/layouts.css
+++ b/node_js/material/layouts.css
@@ -347,6 +347,12 @@ x-layout > [slot=nav-rail] {
     color: var(--md-sys-color-on-primary-container);
 }
 
+@media screen and (max-width: 600px) {
+    .x-layout-float {
+        text-align: center;
+    }
+}
+
 /*** x-pane style ***/
 .x-layout-pane {
     border-radius: var(--pane-border-radius);
